# sy-stock-logistics-workflow

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  test-requirements.txt
.github/workflows/: test.yml
picking_serial_list/: README.rst  __manifest__.py
picking_serial_list/i18n/: es.po
picking_serial_list/models/: __init__.py  stock_move.py  stock_move_line.py  stock_picking.py  stock_picking_type.py
picking_serial_list/views/: stock_picking_views.xml
picking_type_confirmation_requirement_rules/: README.rst  __manifest__.py
picking_type_confirmation_requirement_rules/i18n/: es.po
picking_type_confirmation_requirement_rules/models/: __init__.py  stock_picking.py  stock_picking_requirement_rule.py  stock_picking_type.py
picking_very_high_priority/: README.rst  __manifest__.py
picking_very_high_priority/i18n/: es.po
product_search_category_attribute_stock/: README.rst  __manifest__.py
queued_picking_notify/: README.rst  __init__.py  __manifest__.py
queued_purchase_picking_notify/: README.rst  __manifest__.py
queued_sale_picking_notify/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
stock_manual_shipping_weight/: README.rst  __manifest__.py
stock_move_responsible/: README.rst  __init__.py  __manifest__.py
stock_picking_force_availability/: README.rst  __init__.py  __manifest__.py
stock_picking_report_line_product_without_internal_ref/: README.rst  __manifest__.py
stock_picking_show_move_lots/: README.rst  __manifest__.py
stock_picking_terms/: README.rst  __manifest__.py
(+97 files in other folders)
